--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -123,16 +123,13 @@ a.desc:after {
 body {
 / / font-family: 'Oswald', sans-serif;
 }
-
 .form-part {
 
 }
-
 .form-part .form-header {
     line-height: 2em;
     background-color: #7cb7e2;
 }
-
 .form-part .form-header .form-header-part-number {
     padding-left: 10px;
     width: 120px;
@@ -140,24 +137,65 @@ body {
     display: inline-block;
     color: #ffffff;
 }
-
 .form-part .form-header .form-header-title {
     padding-left: 10px;
     font-weight: bold;
     color: #244362;
     display: inline-block;
 }
-
 .form-part .form-content {
     padding: 10px 0;
 }
-
 .form-part .form-content .form-label {
+    margin-bottom: 5px;
     text-transform: uppercase;
     font-weight: bold;
+    display: inline-block;
 }
-
 .form-part .form-content .form-value {
     border: 2px solid #7cb7e2;
     padding: 5px;
+    margin-bottom: 5px;
+}
+
+.character-form input, .character-form select, .character-form textarea {
+    padding: 5px;
+    border: 2px solid #7cb7e2;
+}
+
+.character-form select, .character-form select {
+    padding: 0;
+}
+
+.character-form .has-error input, .character-form .has-error select, .character-form .has-error textarea {
+    border-color: #a94442;
+}
+
+.character-form input[type='number'] {
+    -moz-appearance: textfield;
+}
+
+.character-form input[type='number']::-webkit-outer-spin-button,
+.character-form input[type='number']::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
+
+.character-form label.control-label {
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.character-form .form-group:not(.character-skill) label.control-label::after {
+    content: ":";
+}
+
+.character-form .character-skill input {
+    text-align: center;
+    width: 34px;
+    float: right;
+    display: inline-block;
+}
+
+.character-form .form-group {
+    margin-bottom: 5px;
 }
