--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -123,13 +123,16 @@ a.desc:after {
 body {
 / / font-family: 'Oswald', sans-serif;
 }
+
 .form-part {
 
 }
+
 .form-part .form-header {
     line-height: 2em;
     background-color: #7cb7e2;
 }
+
 .form-part .form-header .form-header-part-number {
     padding-left: 10px;
     width: 120px;
@@ -137,21 +140,25 @@ body {
     display: inline-block;
     color: #ffffff;
 }
+
 .form-part .form-header .form-header-title {
     padding-left: 10px;
     font-weight: bold;
     color: #244362;
     display: inline-block;
 }
+
 .form-part .form-content {
     padding: 10px 0;
 }
+
 .form-part .form-content .form-label {
     margin-bottom: 5px;
     text-transform: uppercase;
     font-weight: bold;
     display: inline-block;
 }
+
 .form-part .form-content .form-value {
     border: 2px solid #7cb7e2;
     padding: 5px;
@@ -198,4 +205,39 @@ body {
 
 .character-form .form-group {
     margin-bottom: 5px;
+}
+
+.btn.btn-flat {
+    border-radius: 0;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    border-width: 1px;
+}
+
+.btn-google {
+    color: #fff;
+    background-color: #dd4b39;
+    border-color: rgba(0, 0, 0, 0.2);
+}
+
+.btn-social {
+    position: relative;
+    padding-left: 44px;
+    text-align: left;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.btn-social > :first-child {
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    width: 32px;
+    line-height: 34px;
+    font-size: 1.6em;
+    text-align: center;
+    border-right: 1px solid rgba(0, 0, 0, 0.2);
 }
