--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -17,7 +17,7 @@ body label {
 }
 
 .wrap > .container {
-    padding: 70px 15px 20px;
+    padding: 70px 15px 15px;
 }
 
 .footer {
@@ -240,4 +240,146 @@ body {
     font-size: 1.6em;
     text-align: center;
     border-right: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.character-form-container {
+    position: relative;
+    background-color: #ffffff;
+    z-index: 1100;
+}
+
+.character-form-container.container-fullscreen {
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
+    padding: 15px;
+}
+
+.btn-fullscreen {
+    position: absolute;
+    right: 0px;
+    z-index: 1110;
+}
+
+.container-fullscreen .btn-fullscreen {
+    right: 15px;
+}
+
+.btn-round {
+    width: 2.5em;
+    height: 2.5em;
+    border-radius: 1.25em;
+    padding: 0.35em 0;
+    text-align: center;
+}
+
+.btn-outline-dark {
+    color: #343a40;
+    background: transparent none;
+    border-color: #343a40;
+}
+
+.btn-outline-secondary {
+    color: #6c757d;
+    background: transparent none;
+    border-color: #6c757d;
+}
+
+.btn-outline-secondary:hover {
+    color: #fff;
+    background-color: #6c757d;
+    border-color: #6c757d;
+}
+
+.btn-outline-primary {
+    color: #007bff;
+    background: transparent none;
+    border-color: #007bff;
+}
+
+.btn-outline-primary:hover {
+    color: #fff;
+    background-color: #007bff;
+    border-color: #007bff;
+}
+
+.btn-outline-success {
+    color: #28a745;
+    background: transparent none;
+    border-color: #28a745;
+}
+
+.btn-outline-success:hover {
+    color: #fff;
+    background-color: #28a745;
+    border-color: #28a745;
+}
+
+.btn-outline-danger {
+    color: #dc3545;
+    background: transparent none;
+    border-color: #dc3545;
+}
+
+.btn-outline-danger:hover {
+    color: #fff;
+    background: #dc3545;
+    border-color: #dc3545;
+}
+
+.btn-outline-warning {
+    color: #ffc107;
+    background: transparent none;
+    border-color: #ffc107;
+}
+
+.btn-outline-warning:hover {
+    color: #fff;
+    background: #ffc107;
+    border-color: #ffc107;
+}
+
+.btn-outline-info {
+    color: #17a2b8;
+    background: transparent none;
+    border-color: #17a2b8;
+}
+
+.btn-outline-info:hover {
+    color: #fff;
+    background: #17a2b8;
+    border-color: #17a2b8;
+}
+
+.btn-outline-light {
+    color: #f8f9fa;
+    background: transparent none;
+    border-color: #f8f9fa;
+}
+
+.btn-outline-light:hover {
+    color: #fff;
+    background: #f8f9fa;
+    border-color: #f8f9fa;
+}
+
+.btn-outline-alpha {
+    color: #7cb7e2;
+    background: transparent none;
+    border-color: #7cb7e2;
+}
+
+.btn-outline-alpha:hover {
+    color: #fff;
+    background: #7cb7e2;
+    border-color: #7cb7e2;
+}
+
+[type=reset], [type=submit], button, html [type=button] {
+    -webkit-appearance: button;
+}
+
+.btn:focus, .btn:hover {
+    text-decoration: none;
 }
